--- a/vag.html
+++ b/vag.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="assets/style.css?sfasdafsdddfsfsddfdgfdssdfdsssdds">
+	<link rel="stylesheet" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/assets/style.css">
 
 </head>
 <body>
@@ -57,7 +57,7 @@
 		<!--- # --->
 	</div>
 
-	<script src="pages/init.js"></script>
+	<script src="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/pages/init.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/js/swiper.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js'></script>
