--- a/vag.html
+++ b/vag.html
@@ -6,6 +6,8 @@
 	
 	<title>Research Grants and Vacancies - Structured Materials and Dynamics Lab - School of Civil Engineering - UCD</title>
 	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
