--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/assets/style.css">
+		
+	<link rel="apple-touch-icon" sizes="180x180" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/favicon-16x16.png">
+	<link rel="manifest" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/site.webmanifest">
 </head>
 <body>
 	<div class="container" id="style-3">
