--- a/vag.html
+++ b/vag.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/assets/style.css">
+	<link rel="stylesheet" href="./assets/style.css">
 		
 	<link rel="apple-touch-icon" sizes="180x180" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/favicon-32x32.png">
@@ -64,7 +64,7 @@
 		<!--- # --->
 	</div>
 
-	<script src="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/pages/init.js?2"></script>
+	<script src="./pages/init.js?3"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/js/swiper.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js'></script>
