--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 	<link rel="manifest" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/site.webmanifest">
 </head>
 <body>
-
+	<!--- loading --->
+  	<div class="loader">
+	  <div class="loader-inner"></div>
+	</div>
+	
 	<div class="container" id="style-3">
 		<!--- # --->
 		
