--- a/vag.html
+++ b/vag.html
@@ -22,6 +22,11 @@
 
 </head>
 <body>
+	<!--- loading --->
+  	<div class="loader">
+	  <div class="loader-inner"></div>
+	</div>
+	
 	<div class="container" id="style-3">
 		<!--- # --->
 		
