--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,11 @@
 
 </head>
 <body>
+	<!--- loading --->
+  	<div class="loader">
+	  <div class="loader-inner"></div>
+	</div>
+	
 	<div class="container" id="style-3">
 		<!--- # --->
 		
