--- a/news.html
+++ b/news.html
@@ -15,10 +15,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	
-	<link rel="apple-touch-icon" sizes="180x180" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/favicon-16x16.png">
-	<link rel="manifest" href="https://structured-materials-and-dynamics-lab.storage.c2.liara.space/fav/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./fav/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png">
+	<link rel="manifest" href="./fav/site.webmanifest">
 </head>
 <body>
 	<!--- loading --->
